# music-slack-status

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
slack/: slack.py
spotify/: spotify.py
