[tool.poetry]
name = "music-slack-status"
version = "0.1.0"
description = ""
authors = ["Steven Tohme <steventohme59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.33.1"
python-dotenv = "^1.0.1"
spotipy = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
